# ZipVoice

./: .gitignore  README.md  pyproject.toml  run.sh  webui_zh.py
egs/zipvoice/: README.md  run_custom.sh  run_emilia.sh  run_eval.sh  run_finetune.sh  run_libritts.sh
egs/zipvoice/local/: prepare_token_file_emilia.py
egs/zipvoice_dialog/: run_custom.sh  run_eval.sh  run_finetune.sh  run_opendialog.sh
egs/zipvoice_dialog/local/: prepare_custom_dataset.py  prepare_opendialog.py
runtime/nvidia_triton/: Dockerfile.server  README.md  docker-compose.yml  requirements.txt  run.sh
runtime/nvidia_triton/model_repo/zipvoice/: config.pbtxt
runtime/nvidia_triton/model_repo/zipvoice/1/: model.py
zipvoice/: onnx_export.py  zipvoice_infer_onnx.py
zipvoice/eval/: utils.py
zipvoice/eval/mos/: utmos.py
zipvoice/eval/speaker_similarity/: cpsim.py  sim.py
zipvoice/eval/wer/: dialog.py  hubert.py  seedtts.py
zipvoice/models/: zipvoice.py
zipvoice/models/modules/: zipformer.py
zipvoice/tokenizer/: normalizer.py  tokenizer.py
zipvoice/utils/: checkpoint.py  common.py  infer.py  tensorrt.py
