[project]
name = "zipvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cn2an>=0.5.23",
    "huggingface-hub>=0.35.3",
    "inflect>=7.5.0",
    "jieba>=0.42.1",
    "lhotse>=1.31.1",
    "numpy>=2.3.3",
    "piper-phonemize>=1.3.0",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "safetensors>=0.6.2",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "vocos>=0.1.0",
]

[project.optional-dependencies]
eval = [
    "funasr>=1.2.7",
    "jiwer==3.1.0",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "pyannote-audio>=4.0.1",
    "s3prl>=0.4.18",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "zhconv>=1.4.3",
    "zhon>=2.1.1",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
